Fixed line height of area name in area list on small devices

--- a/static/style.css
+++ b/static/style.css
@@ -921,6 +921,7 @@ tr table tr:hover td {
 @media screen and (max-width: 480px) {
   .area_list .area .name {
     display: block;
+    line-height: 100%;
   }
   
   .area_list .area .delegatee,
